# PC-builder-RAG

./: .dockerignore  .env.example  .gitignore  AGENT_RUN_REPORT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: added_readme.md  case.csv  cpu-cooler.csv  cpu.csv  internal-hard-drive.csv  memory.csv  motherboard.csv  video-card.csv
evaluation/: metrics.py  run_eval.py  run_metrics_test.py  scenarios.json
src/: config.py  main.py
src/agent/: loop.py  prompts.py  tools.py
src/data/: loader.py  models.py
src/engine/: compatibility.py  optimizer.py  validator.py
src/utils/: logging_config.py
ui/: app.py
